--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "@vue/composition-api": "^1.4.6",
-    "pinia": "^2.0.4",
+    "firebase": "^9.6.11",
+    "pinia": "^2.0.13",
     "vee-validate": "^3.4.14",
-    "vue": "^2.6.14",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.0.0",
-    "vuetify": "^2.6.4"
+    "vuetify": "^2.6.4",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@mdi/font": "^6.6.96",
