--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "@vue/composition-api": "^1.4.6",
+    "axios": "^0.26.1",
     "firebase": "^9.6.11",
     "pinia": "^2.0.13",
     "vee-validate": "^3.4.14",
