--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
         "./*"
        ]
     },
-    "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost","es6"],
     "skipLibCheck": true
   },
   "vueCompilerOptions": {
